# bluetooth-timeout

./: .gitignore  Cargo.toml  Justfile  README.md  config.yml
contrib/: bluetooth-timeout.service  config.yml
src/: conf.rs  configuration.rs  log.rs  main.rs  notification.rs  serde_ext.rs  timeout.rs
src/bluetooth/: device.rs  mod.rs  observer.rs  service.rs  service_proxy.rs
