[package]
name = "bluetooth-timeout"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
xdg = "3.0.0"
zbus = { version = "5.12.0", features = ["tokio"] }
