[package]
name = "bluetooth-timeout"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
console-subscriber = { version = "0.5.0", optional = true }
futures-util = "0.3.31"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
] }
tracing = { version = "0.1.42", features = ["release_max_level_info"] }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.21"
xdg = "3.0.0"
zbus = { version = "5.12.0", features = ["tokio"] }

[features]
tokio-console = ["dep:console-subscriber"]
